@@ -89,12 +89,13 @@ BitmapSource::GetSurface (cairo_t *cr)
 	if (native_surface)
 		return native_surface;
 	
-	if (cr == NULL)
-		return image_surface;
-
-	native_surface = cairo_surface_create_similar (cairo_get_group_target (cr), 
+	if (cr == NULL) {
+		native_surface = cairo_image_surface_create (CAIRO_FORMAT_ARGB32, GetPixelWidth (), GetPixelHeight ());
+	} else {
+		native_surface = cairo_surface_create_similar (cairo_get_group_target (cr), 
 						       cairo_surface_get_content (image_surface), 
 						       GetPixelWidth (), GetPixelHeight ());
+	}
 
 	cairo_t *context = cairo_create (native_surface);
 
